# django-fly-replay

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
django_fly_replay/: __init__.py  apps.py  client.py  decorators.py  exceptions.py  machines.py  middleware.py  processes.py  services.py
tests/: conftest.py  settings.py  test_apps.py  test_client.py  test_decorators.py  test_machines.py  test_middleware.py  test_processes.py  test_services.py  urls.py  views.py
