[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-fly-replay"
version = "0.1.0"
description = "Offload resource-intensive Django views to serverless Fly Machines via fly-replay"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kátia Nakamura", email = "me@katia.dev" }]
requires-python = ">=3.10"
dependencies = ["django>=5.2"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

keywords = ["django", "fly.io", "flyio", "serverless", "middleware", "fly-replay", "fly machines"]

[project.urls]
Repository = "https://github.com/katiayn/django-fly-replay"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "tox>=4",
]
